fix paths issues